fix: fix align socials links

--- a/christmas-shop/src/sass/layouts/_footer.scss
+++ b/christmas-shop/src/sass/layouts/_footer.scss
@@ -65,4 +65,5 @@ footer {
     @extend %transition;
     stroke: var(--dark);
     width: 40px;
+    text-align: center;
 }
